--- a/simplesupport.html
+++ b/simplesupport.html
@@ -15,7 +15,7 @@
         <img src="content/logo.jpg" alt="Simple Support" width="70px">
         <ul class="text-gray-400 hover:transition-all hover:text-red-400 ml-auto mr-0 text-right flex">
           <button style="width: 100px;" class="text-gray-400 hover:transition-all hover:text-red-400 ml-auto mr-0 text-right-flex">Features</button>
-          <button style="width: 78px;" class="text-gray-400 hover:transition-all hover:text-red-400 ml-auto mr-0 text-right-flex">Commands</button>
+          <button style="width: 78px;" class="text-gray-400 hover:transition-all hover:text-red-400 ml-auto mr-0 text-right-flex" onclick="guidelines()">Guidelines</button>
           <button style="width: 100px;" class="text-gray-400 hover:transition-all hover:text-red-400 ml-auto mr-0 text-right-flex" onclick="invbut()">Invite</button>
         </ul>
       </div>
@@ -37,10 +37,55 @@
     </div>
     <br>
     <hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
-    <h1 class="text-white text-center text-4xl font-bold">Features</h1>
-    <ul type="123">
-
-    </ul>
+    <h1 class="text-white font-extrabold text-5xl text-start">Information</h1>
+    <br>
+    <p class="text-white">
+      Greetings! Simple Support here, I present you with utility command, moderation and administration, custom texts with embedded feature and more!
+    </p>
+    <br>
+    <br>
+    <br>
+    <div id="wrapper" class="">
+        <div class="w-96 bg-gray-800 shadow-lg rounded-lg" id="collapsible-menu">
+    <!-- Collapsible Menu Sections -->
+    <div class="menu-item border-b border-gray-200" data-id="item1">
+      <button class="menu-header">
+            <span class="text-white font-bold">Scouting</span>
+        <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+        </svg>
+      </button>
+      <div class="menu-content hidden">
+        <p class="text-white">Capability of Simple Support is still not the latest but I'll manage to help you with things which are much more simple!</p>
+      </div>
+    </div>
+            <div class="menu-item border-b border-gray-200" data-id="item2">
+      <button class="menu-header">
+        <span class="text-white font-bold">Moderation</span>
+        <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+        </svg>
+      </button>
+      <div class="menu-content hidden">
+        <p class="text-white">Moderation relies on the role which it has so please try to give or keep the role above the most of cosmetic roles/common role. </p>
+      </div>
+    </div>
+            <div class="menu-item" data-id="item3">
+      <button class="menu-header">
+        <span class="text-white font-bold">Fun</span>
+        <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+        </svg>
+      </button>
+      <div class="menu-content hidden">
+        <p class="text-white">Members might like the commands which are just related to their reactions. Free to share their reactions with giggles and moments.</p>
+      </div>
+    </div>
+  </div>
+      <br>
+      <br>
+      <br>
+      <br>
     <script src="index.js">
       
     </script>
